advanced watering feature

--- a/templates/plant.html
+++ b/templates/plant.html
@@ -60,8 +60,8 @@ td, th {
             <input type="submit" value="Delete">
             </form>
             <br>
-            <form action= "{{ url_for ('water_plant', plant_id = plant.id) }}" method="POST">
-                <input type="submit" value="Water">
+            <form action= "{{ url_for ('care', plant_id = plant.id) }}" method="POST">
+                <input type="submit" value="Care">
                             
 
             </form>
