home link in add plant

--- a/application/templates/add.html
+++ b/application/templates/add.html
@@ -3,6 +3,7 @@
         <title>Houseplant care tracker</title>
     </head>
     <body>
+      <a href="/">Home</a>
       <h2>{{ legend }}</h2>
       <br>
       <div>
