--- a/application/templates/add.html
+++ b/application/templates/add.html
@@ -26,19 +26,12 @@
 
                 {{ form.submit }}
                 <br>
-                {% for field, errors in form.errors.items() if field==houseplant_name %}
-                {{ ' '.join(errors) }}
-                {% endfor %}
-                <br>
-                {% for field, errors in form.errors.items() if field==date_acquired and len(form.date_acquired) >0 %}
-                {{ ' '.join(errors) }}
-                {% endfor %}
-                <br>
+              <br>
                 {% for field, errors in form.errors.items() %}
-                {{ ' '.join(errors) }}
+                <li>{{ errors[0] }}</li>
                 {% endfor %}
                 <br>
-                {{error_fields}}
+                
           </form>
       </div>
 
